# ELT-faker-project

./: .gitignore  README.md  docker-compose.yaml  product.parquet  setup.cfg  test.ipynb
.github/workflows/: python-app.yml
docker/db/: oltp_schema.sql
docker/db/duckdb/: duckdb_dw.duckdb  duckdb_dw.duckdb.wal
docker/superset/: Dockerfile  superset-init.sh
faker/: FakerGeneratorInterface.py  ProductGenerator.py  TransactionGenerator.py  UserGenerator.py  schedule.sh
faker/data_sample/: products.csv  transaction_detail.csv  transactions.csv  users.csv
monitoring/logs/: logging.txt  product_logs.txt  transaction_logs.txt  user_logs.txt
src/ETLPipeline/: __init__.py  test_def.py  user_snapshot.py
src/ETLPipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ETLPipeline/snapshot/: __init__.py  daily_snapshot.py
src/ETLPipeline/transformation/: __init__.py  transformation.py
src/ETLPipeline/utils/: PostgresConnection.py  __init__.py  logger.py
test/: test.ipynb  transformation_test.ipynb
