[metadata]
name = ETLPipeline
version = 0.1.0
author = huy-kun
author_email = ngogiahuy201202@gmail.com
description = ETL pipeline source code
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    psycopg2-binary==2.9.9
    pandas==2.2.2
    faker==25.3.0
    numpy==1.26.4
    pyarrow==16.1.0
    duckdb==1.0.0
[options.packages.find]
where = src